<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sosmobileapp.ui.instructions.InstructionsFragment"
        android:label="@string/title_sos"
        tools:layout="@layout/fragment_instructions" />

    <fragment
        android:id="@+id/navigation_instructions"
        android:name="com.example.sosmobileapp.ui.instructions.InstructionsFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/fragment_instructions" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sosmobileapp.ui.instructions.InstructionsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_instructions" />
</navigation>